Updated by OWASP Threat Dragon

--- a/ThreatDragonModels/WebAppModel/WebAppModel.json
+++ b/ThreatDragonModels/WebAppModel/WebAppModel.json
@@ -51,16 +51,26 @@
               "angle": 0,
               "id": "8591e510-4e7f-4c63-8666-8045b909bc01",
               "z": 2,
-              "hasOpenThreats": false,
+              "hasOpenThreats": true,
+              "threats": [
+                {
+                  "status": "Open",
+                  "severity": "Medium",
+                  "title": "Basic authentication",
+                  "type": "Spoofing",
+                  "description": "Des isch schlecht...",
+                  "mitigation": "Non, we have trust"
+                }
+              ],
               "attrs": {
                 ".element-shape": {
-                  "class": "element-shape hasNoOpenThreats isInScope"
+                  "class": "element-shape hasOpenThreats isInScope"
                 },
                 "text": {
                   "text": "actor 1"
                 },
                 ".element-text": {
-                  "class": "element-text hasNoOpenThreats isInScope"
+                  "class": "element-text hasOpenThreats isInScope"
                 }
               }
             },
